fix styling on mobile again

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,11 +1,10 @@
-
 body {
     font-family: "Amiri", serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    height: 100svh;
     height: 100vh;
     background: url(../images/2.jpg) no-repeat scroll center top transparent;
     background-size: auto 100%;
@@ -13,16 +12,37 @@ body {
     font-size: 20px;
 }
 
+main {
+    display: flex !important;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
 .overlay {
     position: absolute;
     inset: 0;
     background-color: black;
+    height: 100svh;
+    height: 100vh;
     opacity: 0.8;
     z-index: -1;
 }
 
-h1 {
+.title {
+    position: absolute;
+    top: 25px;
+    left: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 22px;
     margin: 0;
+}
+
+.hadith-container {
+    max-height: 300px;
+    overflow-y: scroll;
 }
 
 #hadith {
@@ -37,7 +57,6 @@ h1 {
     top: 0;
     width: 200px;
     height: 100vh;
-    height: 100svh;
     overflow-y: auto;
     padding-left: 10px;
     padding-right: 5px;
@@ -53,6 +72,12 @@ h1 {
     background: #00549d;
 }
 
+.list-btn {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+}
+
 ul {
     list-style-type: none;
     padding: 0;
@@ -62,7 +87,8 @@ ul {
     gap: 12px;
     border: 1px;
 }
-.list-items{
+
+.list-items {
     margin-top: 20px;
     max-height: 500px;
     height: max-content;
@@ -109,6 +135,7 @@ ul {
     justify-content: center;
     align-items: center;
     gap: 20px;
+    overflow-y: hidden;
 }
 
 .test-window.active {
@@ -128,76 +155,76 @@ ul {
     right: 5px;
 }
 
- /* The switch - the box around the slider */
+/* The switch - the box around the slider */
 .switch {
-  position: relative;
-  display: inline-block;
-  width: 40px;
-  height: 24px;
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 24px;
 }
 
 /* Hide default HTML checkbox */
 .switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
 
 /* The slider */
 .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .2s;
-  transition: .2s;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .2s;
+    transition: .2s;
 }
 
 .slider:before {
-  position: absolute;
-  content: "";
-  height: 15px;
-  width: 15px;
-  left:  5px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .2s;
-  transition: .2s;
+    position: absolute;
+    content: "";
+    height: 15px;
+    width: 15px;
+    left: 5px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .2s;
+    transition: .2s;
 }
 
-input:checked + .slider {
-  background-color: #2196F3;
+input:checked+.slider {
+    background-color: #2196F3;
 }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+input:focus+.slider {
+    box-shadow: 0 0 1px #2196F3;
 }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(16px);
-  -ms-transform: translateX(16px);
-  transform: translateX(16px);
+input:checked+.slider:before {
+    -webkit-transform: translateX(16px);
+    -ms-transform: translateX(16px);
+    transform: translateX(16px);
 }
 
 /* Rounded sliders */
 .slider.round {
-  border-radius: 34px;
+    border-radius: 34px;
 }
 
 .slider.round:before {
-  border-radius: 50%;
-} 
-
-.tashkil{
-    position: absolute;
-    left: 30px;
-    bottom: 20px;
+    border-radius: 50%;
 }
 
-button{
+.tashkil {
+    align-self: self-end;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+button {
     padding: 10px;
     color: white;
     border: none;
@@ -205,10 +232,11 @@ button{
     background-color: #00549d90;
     cursor: pointer;
 }
-select{
+
+select {
     background-color: #00649d;
     color: white;
-    width: 200px; 
+    width: 200px;
     border-radius: 6px;
-    border: 1px ;
+    border: 1px;
 }
